Blender crash when curve has dense mesh and solidify modifier #74195

Closed
opened 2020-02-25 13:10:12 +01:00 by Piotr Załóg · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

There is problem with small curves and Solidify modifier. When curve has dense mesh and Solidify is set to COMPLEX, they crashes Blender.

  1. Download file bug_svg_solidify_03.blend
  2. Select DG letters.
  3. Go to curve properites on right.
  4. Increase parameter RESOLUTION PREVIEW from 1 to 5 or more.
  5. Crash :(

Some curves require to set Resolution Preview to 30 or even 100. I can't reproduce crash with text-objects.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` There is problem with small curves and Solidify modifier. When curve has dense mesh and Solidify is set to COMPLEX, they crashes Blender. 0. Download file [bug_svg_solidify_03.blend](https://archive.blender.org/developer/F8369236/bug_svg_solidify_03.blend) 1. Select DG letters. 2. Go to curve properites on right. 3. Increase parameter RESOLUTION PREVIEW from 1 to 5 or more. 4. Crash :( Some curves require to set Resolution Preview to 30 or even 100. I can't reproduce crash with text-objects.
Author

Added subscriber: @piotr-14

Added subscriber: @piotr-14
Piotr Załóg changed title from Blender crash when curve has dense mesh and solidify midify modifier to Blender crash when curve has dense mesh and solidify modifier 2020-02-25 13:10:32 +01:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

BLI assert failed

  source/blender/modifiers/intern/MOD_solidify_nonmanifold.c:936, MOD_solidify_nonmanifold_applyModifier(), at 'eg_index < (unassigned_edges_len / 2)'
  unassigned_edges_len	uint	5
  eg_index	int	2
BLI assert failed ``` source/blender/modifiers/intern/MOD_solidify_nonmanifold.c:936, MOD_solidify_nonmanifold_applyModifier(), at 'eg_index < (unassigned_edges_len / 2)' unassigned_edges_len uint 5 eg_index int 2

Added subscribers: @HDMaster84, @ideasman42, @mont29

Added subscribers: @HDMaster84, @ideasman42, @mont29
Henrik D. was assigned by Bastien Montagne 2020-02-26 17:12:53 +01:00

There is clearly an algorithmic flaw here, but this is fairly complicated (and totally under-documented) code, not easy to follow...

@HDMaster84 can you please check on that? Thanks.

There is clearly an algorithmic flaw here, but this is fairly complicated (and totally under-documented) code, not easy to follow... @HDMaster84 can you please check on that? Thanks.

This issue was referenced by ee4645207f

This issue was referenced by ee4645207f76a5d76902cec11906ddd3ae815baa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74195
No description provided.