Fix T74195: Solidify Complex Dissolve Crash.

I also added a few more comments to the code as I gone along.

Maniphest Tasks: T74195

Differential Revision: https://developer.blender.org/D7214